@@ -1104,6 +1104,7 @@ enum TrinityStrings
     LANG_SYSTEMMESSAGE_ADMINISTRATOR    = 11666,
     LANG_SYSTEMMESSAGE_GAMEMASTER       = 11667,
     LANG_SYSTEMMESSAGE_GUARD            = 11668,
+    LANG_SYSTEMMESSAGE_DEVELOPER        = 11669,
 
     LANG_REM_TRANSMOGRIFICATIONS_ITEMS  = 11100,
     LANG_ERR_NO_TRANSMOGRIFICATIONS     = 11101,
